Attempt to fix bug where map overlaps contact nav on contact.htm

--- a/resources/scss/style.scss
+++ b/resources/scss/style.scss
@@ -109,6 +109,9 @@ a:hover {
 .layout--page_home .navbar__item {
   width: 25%;
 }
+.layout__main {
+  overflow: hidden;
+}
 
 
 // Blocks
